--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,11 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="hover.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="hover.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
+
+<!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Matt Faubel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,20 +23,61 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
+            <a class="nav-item nav-link active " href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link hvr-pop" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link hvr-pop" href="contact.html">Contact</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Additional Links
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="https://www.seekingalpha.com" target="_blank">Seeking Alpha</a>
+                  <a class="dropdown-item" href="https://www.oilprice.com" target="_blank">OilPrice.com</a>
+                  <a class="dropdown-item" href="https://www.w3schools.com/" target="_blank">w3schools.com</a>
+                  <a class="dropdown-item" href="https://www.reddit.com/r/financialindependence" target="_blank">Reddit FI/RE</a>
+                </div>
+              </li>
           </div>
         </div>
     </nav>
+<!--End of Navbar-->  
 
-    Home Page
+<!--Jumbotron for Home Page Content-->
+<div class="jumbotron">
+  <img src="assets/images/Profile.jpg" style="float:left; margin:10px; padding:10px"></img>
+    <h1 class="display-4">Hello, world!</h1>
+    <p>My name is Matt Faubel, I'm currently an amateur web designer based out of Austin, TX.
+        Throughout the next few weeks I will be updating this portfolio page and my GitHub repository with many
+        different types of coding projects. 
+        <br>
+        <br>
+        I've always believed that financial independence should be a goal for everyone. For the 
+        uninitiated Financially Independent (FI), means not having to work for money. Financial Independence
+        is closely related to the concept of Early Retirement/Retiring Early (RE) - quitting your job/career
+        and pursuing other activities with your time. Under the 'Additional Links' tab I've added
+        my preferred sites to find financial news and stock prices.
+        <br>
+        <br>
+        Throughout the next six months I will be taking a full-stack flex (i.e., part-time) coding
+        course through The Coding Boot Camp at UT Austin. I hope to learn more about front-end technologies (HTML
+        and CSS, of course) as well as the back-end technologies that help make the Internet function
+        as we know it. 
+     </p>
+    <hr class="my-4">
+    <p>Please feel free to explore my GitHub repositories and view my work!</p>
+    <a class="btn btn-primary btn-lg" href="https://www.github.com/zomg830" target="_blank" role="button">GitHub</a>
+  </div>
+<!--End of Jumbotron-->
+
+<!--Sticky Footer-->
     <footer class="footer">
       <div id="github">
-        <a href="https://www.github.com/zomg830" target="_blank"><i class="fab fa-github fa-lg"></i></a> 
-        <a href="https://www.linkedin.com/in/matthew-faubel-1232a857" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
-        <a href="https://www.facebook.com/matthew.faubel" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+        <a href="https://www.github.com/zomg830" target="_blank"><i class="fab fa-github fa-lg hvr-pulse-grow"></i></a> 
+        <a href="https://www.linkedin.com/in/matthew-faubel-1232a857" target="_blank"><i class="fab fa-linkedin fa-lg hvr-pulse-grow"></i></a>
+        <a href="https://www.facebook.com/matthew.faubel" target="_blank"><i class="fab fa-facebook-f fa-lg hvr-pulse-grow"></i></a>
     </div>
     </footer>
+<!--End of Sticky Footer-->
+
 </body>
 </html>
