Changed navbar and footer theme to dark

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Matt Faubel</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
 </div>
 
 <!--Sticky footer-->
-    <footer class="footer">
+    <footer class="footer bg-dark">
       <div id="github">
         <a href="https://www.github.com/zomg830" target="_blank"><i class="fab fa-github fa-lg hvr-pulse-grow"></i></a> 
         <a href="https://www.linkedin.com/in/matthew-faubel-1232a857" target="_blank"><i class="fab fa-linkedin fa-lg hvr-pulse-grow"></i></a>
