Updated navbar components to accurately reflect active page

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active hvr-pop" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link hvr-pop" href="index.html">Home</a>
         <a class="nav-item nav-link hvr-pop" href="portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link hvr-pop" href="contact.html">Contact</a>
+        <a class="nav-item nav-link active hvr-pop" href="contact.html">Contact <span class="sr-only">(current)</span></a>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Additional Links
