--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active " href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active hvr-pop" href="index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link hvr-pop" href="portfolio.html">Portfolio</a>
             <a class="nav-item nav-link hvr-pop" href="contact.html">Contact</a>
             <li class="nav-item dropdown">
