--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active hvr-pop" href="index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link hvr-pop" href="portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link hvr-pop" href="index.html">Home</a>
+        <a class="nav-item nav-link active hvr-pop" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link hvr-pop" href="contact.html">Contact</a>
         <li class="nav-item dropdown hvr-pop" style="z-index: 999">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
