--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,33 @@
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Word-Guess-Game</h5>
             <p class="card-text">Link to my "Word-Guess-Game". Very similar to the classic Hangman game and themed to the book and television series, "The Expanse".</p>
-            <a href="https://zomg830.github.io/Responsive-Portfolio/index.html" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+            <a href="https://zomg830.github.io/Word-Guess-Game/" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+          </div>
+    </div>
+  </div>
+  <div class="row" style="justify-content: center">
+    <div class="card" style="width: 18rem; margin:10px;">
+        <img class="card-img-top" style="height:40%" src="assets/images/Construction.png" alt="Under-Construction">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Coming Soon!</h5>
+            <p class="card-text"></p>
+            <a href="#" target="_blank" class="btn btn-primary mt-auto">View Project</a>
+          </div>
+    </div>
+    <div class="card" style="width: 18rem; margin:10px;">
+        <img class="card-img-top" style="height:40%" src="assets/images/Construction.png" alt="Under-Construction">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Coming Soon!</h5>
+            <p class="card-text"></p>
+            <a href="#" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+          </div>
+    </div>
+    <div class="card" style="width: 18rem; margin:10px;">
+        <img class="card-img-top" style="height:40%" src="assets/images/Construction.png" alt="Under-Construction">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Coming Soon!</h5>
+            <p class="card-text"></p>
+            <a href="#" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
           </div>
     </div>
   </div>
