--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,13 @@
 </div>
 
 <!--Sticky footer-->
-    <footer class="footer bg-dark">
-      <div id="github">
-        <a href="https://www.github.com/zomg830" target="_blank"><i class="fab fa-github fa-lg hvr-pulse-grow"></i></a> 
-        <a href="https://www.linkedin.com/in/matthew-faubel-1232a857" target="_blank"><i class="fab fa-linkedin fa-lg hvr-pulse-grow"></i></a>
-        <a href="https://www.facebook.com/matthew.faubel" target="_blank"><i class="fab fa-facebook-f fa-lg hvr-pulse-grow"></i></a>
-    </div>
-    </footer>
+<footer class="footer bg-dark">
+  <div class="row" id="github" style="justify-content:center">
+    <a href="https://www.github.com/zomg830" target="_blank"><i class="fab fa-github fa-lg hvr-pulse-grow"></i></a> 
+    <a href="https://www.linkedin.com/in/matthew-faubel-1232a857" target="_blank"><i class="fab fa-linkedin fa-lg hvr-pulse-grow"></i></a>
+    <a href="https://www.facebook.com/matthew.faubel" target="_blank"><i class="fab fa-facebook-f fa-lg hvr-pulse-grow"></i></a>
+</div>
+</footer>
 <!--End of Footer-->
 
 </body>
