Fixed jumbotron height

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!--Jumbotron for Home Page Content-->
 <div class="jumbotron">
   <img src="assets/images/Profile.jpg" style="float:left; margin:10px; padding:10px">
-    <h1 class="display-5">Hello, world!</h1>
+    <h1 class="display-5">About Me</h1>
     <p>My name is Matt Faubel, I'm currently an amateur web designer based out of Austin, TX.
         Throughout the next few weeks I will be updating this portfolio page and my GitHub repository with many
         different types of coding projects. 
