--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,11 @@
   </div>
   <div class="row" style="justify-content: center">
     <div class="card" style="width: 18rem; margin:10px;">
-        <img class="card-img-top" style="height:40%" src="assets/images/Construction.png" alt="Under-Construction">
+        <img class="card-img-top" style="height:40%" src="assets/images/swlogo.jpg" alt="Star Wars RPG">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Coming Soon!</h5>
-            <p class="card-text"></p>
-            <a href="#" target="_blank" class="btn btn-primary mt-auto">View Project</a>
+            <h5 class="card-title">Star Wars RPG</h5>
+            <p class="card-text">Link to my Star Wars RPG. Game mechanics programmed primarily using jQuery and JavaScript. </p>
+            <a href="https://zomg830.github.io/unit-4-game/" target="_blank" class="btn btn-primary mt-auto">View Project</a>
           </div>
     </div>
     <div class="card" style="width: 18rem; margin:10px;">
