--- a/portfolio.html
+++ b/portfolio.html
@@ -78,11 +78,11 @@
           </div>
     </div>
     <div class="card" style="width: 18rem; margin:10px;">
-        <img class="card-img-top" style="height:40%" src="assets/images/Construction.png" alt="Under-Construction">
+        <img class="card-img-top" style="height:40%" src="assets/images/mythology.gif" alt="Trivia Game">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Coming Soon!</h5>
-            <p class="card-text"></p>
-            <a href="#" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+            <h5 class="card-title">Mythology Trivia Game</h5>
+            <p class="card-text">Link to my mythology-themed trivia game. Programmed with jQuery and JavaScript, with an emphasis on time intervals.</p>
+            <a href="https://zomg830.github.io/TriviaGame/" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
           </div>
     </div>
     <div class="card" style="width: 18rem; margin:10px;">
