--- a/portfolio.html
+++ b/portfolio.html
@@ -86,12 +86,12 @@
           </div>
     </div>
     <div class="card" style="width: 18rem; margin:10px;">
-        <img class="card-img-top" style="height:40%" src="assets/images/Construction.png" alt="Under-Construction">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Coming Soon!</h5>
-            <p class="card-text"></p>
-            <a href="#" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
-          </div>
+      <img class="card-img-top" style="height:40%" src="assets/images/giphy.png" alt="Giphy App">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">Giphy App</h5>
+          <p class="card-text">Link to my Giphy App. This is a simple program that utilizes AJAX API calls to populate a web page with data.</p>
+          <a href="https://zomg830.github.io/Giphy-App/" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+        </div>
     </div>
   </div>
 </div> 
