Added link to train schedule app in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,6 +94,32 @@
         </div>
     </div>
   </div>
+  <div class="row" style="justify-content: center">
+    <div class="card" style="width: 18rem; margin:10px;">
+        <img class="card-img-top" style="height:40%" src="assets/images/train.jpg" alt="Star Wars RPG">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Train Schedule App</h5>
+            <p class="card-text">Link to my Train Schedule App. Utilizes Firebase as a basic server-side storage platform for taking user input data and displaying it on the DOM. </p>
+            <a href="https://zomg830.github.io/train-schedule/" target="_blank" class="btn btn-primary mt-auto">View Project</a>
+          </div>
+    </div>
+    <!-- <div class="card" style="width: 18rem; margin:10px;">
+        <img class="card-img-top" style="height:40%" src="assets/images/mythology.gif" alt="Trivia Game">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Mythology Trivia Game</h5>
+            <p class="card-text">Link to my mythology-themed trivia game. Programmed with jQuery and JavaScript, with an emphasis on time intervals.</p>
+            <a href="https://zomg830.github.io/TriviaGame/" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+          </div>
+    </div>
+    <div class="card" style="width: 18rem; margin:10px;">
+      <img class="card-img-top" style="height:40%" src="assets/images/giphy.png" alt="Giphy App">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">Giphy App</h5>
+          <p class="card-text">Link to my Giphy App. This is a simple program that utilizes AJAX API calls to populate a web page with data.</p>
+          <a href="https://zomg830.github.io/Giphy-App/" target="_blank" style class="btn btn-primary mt-auto">View Project</a>
+        </div>
+    </div> -->
+  </div>
 </div> 
 
 <footer class="footer bg-dark">
